Fix passing compilerArgs arguments properly so that multi-dash options like --add-modules can be passed; report compiler errors that ecj mumbles about on stdout instead of properly reporting them in the compiler output log.